Changelog file for Login component.

Login 1.0 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Added UpdateProfile snippet to enable updating of profile from front-end
- [#ADDON-129] Added name to default Register form
- [#ADDON-106] Fixed incorrect plugin event invoking
- [#ADDON-107] Added missing lexicon entry register.password_confirm
- [#ADDON-103] Fixed context-specific issue with register email
- [#ADDON-118] Force lexicon topic to load on lgnRegisterForm
- Fixed alias issue in ForgotPassword snippet
- Added changelog.txt